corrected font:LeagueGothicRegular to all H2
Doesn't look right to have a header contain all styles of other headers (color, shadow, size) yet not also share same font.

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ section li code a {
   font-family: monospace, sans-serif;
 }
 
-header h1 b, #main h2, .belief, .sucks h3 {
+header h1 b, h2, .belief, .sucks h3 {
   font-family: 'LeagueGothicRegular', Arial, sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.5px;
